# nmdns

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  default.nix  flake.nix  justfile  nfpm.yaml  nix-cache-pub-key.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nix.yml  release.yml
examples/: nmdns.toml
man/: nmdns.1  nmdns.8
nix/: module.nix  package.nix
packaging/nix/: package.nix
packaging/systemd/: nmdns.service
scripts/: build-packages.sh
src/: browser.rs  cache.rs  config.rs  daemon.rs  engine.rs  exit_code.rs  iface.rs  lib.rs  main.rs  record_key.rs  repeater.rs  responder.rs  services.rs  state.rs  timing.rs
tests/: cli.rs  features.rs  rfc6762.rs
