[package]
name = "nmdns"
version = "0.2.0"
edition = "2021"
description = "mDNS responder, cache, and cross-interface repeater for routers"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.47", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal",
    "sync",
    "io-util",
    "fs",
] }
tokio-util = "0.7"
hickory-proto = { version = "0.26", default-features = false, features = [
    "mdns",
] }
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.31", features = [
    "net",
    "socket",
    "uio",
    "hostname",
] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
fastrand = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
